# ai-midimacros

./: .gitignore  Cargo.toml  README.md
config/: README.md  sample.yaml
docs/: config_workflow.md  product_goals.md  runtime_modules.md  stack_architecture.md
runtime/core/: Cargo.toml
runtime/core/src/: app.rs  config.rs  lib.rs  runtime.rs  watch.rs
runtime/core/src/console/: mod.rs
runtime/core/src/executor/: mod.rs
runtime/core/src/midi/: input.rs  mod.rs
tools/: README.md
tools/cache_builder/: Cargo.toml  README.md
tools/cache_builder/src/: lib.rs  main.rs
tools/cache_builder/tests/: cache_roundtrip.rs
tools/cache_format/: Cargo.toml  README.md
tools/cache_format/src/: lib.rs
tools/config_validator/: Cargo.toml  README.md
tools/config_validator/src/: lib.rs  main.rs  schema.rs  validation.rs
ui/: README.md
