[package]
name = "ai_midimacros_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_midimacros_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
config_validator = { path = "../../tools/config_validator" }
cache_builder = { path = "../../tools/cache_builder" }
cache_format = { path = "../../tools/cache_format" }
bincode = "1"
notify = "6"
futures = "0.3"
async-trait = "0.1"
enigo = "0.1"
midir = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
